# ore-lang

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.beads/: .beads-credential-key  last-touched  metadata.json
.beads/backup/: backup_state.json  comments.jsonl  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/dolt/: .beads-credential-key
.gastown/: settings.json
bootstrap/ore_cli/: Cargo.toml
bootstrap/ore_codegen/: Cargo.toml
bootstrap/ore_types/: Cargo.toml
crates/ore_c_codegen/: Cargo.toml
crates/ore_cli/: Cargo.toml
crates/ore_cli/src/: main.rs
crates/ore_cli/tests/: integration.rs
crates/ore_codegen/: Cargo.toml
crates/ore_lexer/: Cargo.toml
crates/ore_parser/: Cargo.toml
crates/ore_runtime/: Cargo.toml
crates/ore_typecheck/: Cargo.toml
docs/: COMPETITIVE.md  CONCURRENCY.md  EXAMPLES.md  FEATURES.md  IMPLEMENTATION.md  PHILOSOPHY.md  RADICAL.md  SYNTAX.md  TOOLING.md  TRADEOFFS.md
native/: arena.ore  ast.ore  codegen.ore  lexer.ore  main.c  main.ore  parser.ore  test_ast.ore  test_codegen.ore  test_lexer.ore  test_main.ore  test_parser.ore  test_typecheck.ore  test_types.ore  token.ore  typecheck.ore  types.ore
src/: arena.ore  ast.ore  codegen.ore  codegen.ore.bak  codegen_closures.ore  codegen_defs.ore  codegen_emit.ore  codegen_expr.ore  codegen_match.ore  codegen_state.ore  codegen_types.ore  main.ore  parser.ore  test_codegen.ore  test_main.ore  test_parser.ore  test_typecheck.ore  test_types.ore  typecheck.ore  types.ore
tests/: stress_bootstrap_oom.sh
(+1262 files in other folders)
