[workspace]
resolver = "2"
members = [
    "bootstrap/ore_cli",
    "bootstrap/ore_lexer",
    "bootstrap/ore_parser",
    "bootstrap/ore_types",
    "bootstrap/ore_typecheck",
    "bootstrap/ore_codegen",
    "bootstrap/ore_runtime",
    "bootstrap/ore_c_codegen",
]

[workspace.dependencies]
inkwell = { version = "0.8", features = ["llvm18-1-prefer-dynamic"] }
