[package]
name = "ore_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ore"
path = "src/main.rs"

[dependencies]
ore_lexer = { path = "../ore_lexer" }
ore_parser = { path = "../ore_parser" }
ore_typecheck = { path = "../ore_typecheck" }
ore_codegen = { path = "../ore_codegen" }
ore_runtime = { path = "../ore_runtime" }
clap = { version = "4", features = ["derive"] }
inkwell = { workspace = true }
